# pythonbq

./: .gitignore  Dockerfile  MANIFEST  README.md  example.py  prettify.sh  pyproject.toml  requirements.txt  run_documentation.sh  run_prettify.sh  run_test.sh  setup.cfg  setup.py  update_documentation.sh
docs/: index.html  pythonbq.html  search.js
docs/1.0.0/: index.html  pythonbq.html  search.js
docs/1.0.0/pythonbq/: pythonbq.html
docs/1.1.0/: pythonbq.html
docs/pythonbq/: pythonbq.html
pythonbq/: __init__.py  pythonbq.py
test/: test_open.py  test_private.py
