[tool.black]
line-length = 80
target-version = ['py39']
exclude = '/.*(__pycache__).*/'

[tool.setuptools]
py-modules = ["pythonbq"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonbq"
version = "1.1.0"
description = "Python wrapper for easy use of big query"
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
]
dependencies = ['google-cloud-bigquery==3.29.0','type_enforced>=1.10.1']

[project.urls]
"Homepage" = "https://github.com/connor-makowski/pythonbq"
"Bug Tracker" = "https://github.com/connor-makowski/pythonbq/issues"
"Documentation" = "https://connor-makowski.github.io/pythonbq/pythonbq/pythonbq.html"